--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -11,36 +11,31 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
+  <div class="container">
+    <a class="navbar-brand" href="/">MyBusiness</a>
 
-        <!-- Brand -->
-        <a class="navbar-brand" href="/">MyBusiness</a>
+    <!-- Hamburger button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <!-- Toggle button (mobile) -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto align-items-center">
-
-                <li class="nav-item">
-                    <a class="nav-link" href="/products/">Products</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="/cart/">Cart</a>
-                </li>
-
-                <li class="nav-item ms-2">
-                    <a class="btn btn-outline-light" href="/contact/">Contact</a>
-                </li>
-
-            </ul>
-        </div>
+    <!-- Collapsible menu -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/products/">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart/">Cart</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact/">Contact</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 <div class="container mt-4">
     {% block content %}{% endblock %}
@@ -49,5 +44,6 @@
 <script>
   AOS.init({ duration: 900, once: true });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
